feature/настроить базовые события

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-webpack-boilerplate",
-  "version": "2.0.0",
+  "name": "minesweeper",
+  "version": "1.0.0",
   "description": "[Профиль на github.com](https://github.com/ru39391)",
   "main": "webpack.common.js",
   "scripts": {
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ru39391/my-webpack-boilerplate.git"
+    "url": "git+https://github.com/ru39391/minesweeper.git"
   },
   "author": "tg:vladimir_wd",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ru39391/my-webpack-boilerplate/issues"
+    "url": "https://github.com/ru39391/minesweeper/issues"
   },
-  "homepage": "https://github.com/ru39391/my-webpack-boilerplate#readme",
+  "homepage": "https://github.com/ru39391/minesweeper#readme",
   "devDependencies": {
     "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
